--- a/docs/note/systemArchitecture/1.计算机硬件.md
+++ b/docs/note/systemArchitecture/1.计算机硬件.md
@@ -95,22 +95,25 @@ $$
 ##### 相关公式
 
 1. 流水线周期：指令分为不同执行段，其中执行段最长的时间为流水线周期；
-
-2. 流水线执行时间：
    $$
-   1条指令总执行时间+(总指令数-1)*流水线周期
+   m(x)=max(x)
    $$
 
-3. 流水线吞吐率计算：吞吐率即单位时间内执行指令的条数。
+2. 流水线执行时间：公式为：`1条指令总执行时间+(总指令数-1)*流水线周期`
    $$
-   指令条数/流水线执行时间
+   t(x,y)=g(y)+(x-1)*m(x)
    $$
 
-4. 流水线的加速比：
+3. 流水线吞吐率计算：吞吐率即单位时间内执行指令的条数，公式为：`指令条数/流水线执行时间`。
    $$
-   不使用流水线执行时间/使用流水线执行时间
+   r(x)=x/t
    $$
-   
+
+4. 流水线的加速比：公式为：`不使用流水线执行时间/使用流水线执行时间`
+   $$
+   f3(x)=f1(x)/f2(x)
+   $$
+
 
 ## 存储系统
 
@@ -147,9 +150,9 @@ Cache由控制部分和存储器组成，存储器存储数据，控制部分判
 
 磁盘有正反两个盘面，每个盘面有多个同心圆，每个同心圆是一个磁道，每个同心圆又被分为多个扇区，数据存放在扇区中。
 
-磁盘有一个参数叫转速，指的是每秒转动的次数。磁头首先要寻找到对应的磁道，然后等待磁盘进行周期旋转，旋转到指定的扇区才能读取对应的数据。所以有如下存取时间公式：
+磁盘有一个参数叫转速，指的是每秒转动的次数。磁头首先要寻找到对应的磁道，然后等待磁盘进行周期旋转，旋转到指定的扇区才能读取对应的数据。所以有如下存取时间公式：`存取时间=寻道时间+等待时间`
 $$
-存取时间=寻道时间+等待时间
+t(x)=f(x)+w(x)
 $$
 寻道时间指磁头移动到磁道所需要的时间；等待时间指数据所在扇区转动到磁头下方所用的时间。
 
