--- a/docs/note/systemArchitecture/2.操作系统.md
+++ b/docs/note/systemArchitecture/2.操作系统.md
@@ -5,3 +5,95 @@ permalink: /note/system-architecture/operating-system/
 ---
 
 # 操作系统
+
+## 操作系统概述
+
+### 定义
+
+能有效地组织和管理系统中的各种软硬件资源，合理地组织计算机系统工作流程，控制流程的执行，并且想用户提供一个良好的工作环境和友好的接口。
+
+### 三个作用
+
+1. 管理计算机中运行的程序和分配各种软硬件资源；
+2. 为用户提供友善的人机界面；
+3. 为应用程序的开发和运行提供一个高效率的平台；
+
+### 四个特征
+
+1. 并发性；
+2. 共享性；
+3. 虚拟性；
+4. 不确定性（异步性）
+
+### 操作系统的分类
+
+* 批处理操作系统
+
+  批处理操作系统分为单道批处理和多道批处理。
+
+* 分时操作系统
+
+  分时操作系统是将CPU的工作时间划分为许多很短的时间片，轮流为各个终端的用户服务。尽管各个终端商的作业是断续运行的，但是由于操作系统每次对用户程序都能做出及时响应，因此用户感觉整个系统均归一人占用。分时操作系统的四个特性，多路性、独立性、交互性和及时性。
+
+* 实时操作系统
+
+  实时是指计算机对于外来信息能够以足够快的速度进行处理，并在被控对象允许的时间范围内做出快速反应。实时系统对交互能力要求不高，但要求可靠性有保障。
+
+* 网络操作系统
+
+  网络操作系统是使联网计算机能够方便而有效地共享网络资源，为网络用户提供各种服务的软件和有关协议的集合。一个典型的玩过操作系统的特征包括硬件独立性和多用户支持等。
+
+* 分布式操作系统
+
+  分布式操作系统是由多个分散的计算机连接而成的计算机系统，系统中的计算机无主次之分。分布式操作系统是网络操作系统的更高级形式，它保持网络系统所拥有的全部功能，同时又有透明性、可靠性和高性能等特性。
+
+* 微型计算机操作系统
+
+  微型计算机系统建成微机操作系统，如Windows、Mac OS、Linux等。
+
+* 嵌入式操作系统
+
+  嵌入式操作系统的主要特点：
+
+  1. 微型化。
+  2. 可定制。
+  3. 实时性。
+  4. 可靠性。
+  5. 易移植性。
+
+  嵌入式系统初始化过程按照自底向上、从硬件到软件的次序为：片级初始化 -> 板级初始化  -> 系统初始化。
+
+## 进程管理
+
+进程由进程控制块PCB（唯一标志）、程序（描述程序要做什么）和数据（存放进程执行时所需要的数据）组成。
+
+### 进程的三态图和五态图
+
+![Ky1IoS](https://qiqiang.oss-cn-hangzhou.aliyuncs.com/muan/Ky1IoS.png)
+
+### 进程前驱图
+
+反应了程序之间的并行和顺序关系。
+
+![6n7yvM](https://qiqiang.oss-cn-hangzhou.aliyuncs.com/muan/6n7yvM.png)
+
+### 进程资源图
+
+![sF7hVa](https://qiqiang.oss-cn-hangzhou.aliyuncs.com/muan/sF7hVa.png)
+
+如上图所示，
+
+1. 资源R1总共有两个，资源R2总共有三个，资源R3总共有两个（看有几个圆圈）。
+2. 进程P1拥有一个R1和一个R2（看指向P1的箭头），还需要申请一个R2（看从P1出去的箭头）；进程P2拥有一个R2和一个R3，还需要申请一个R1；进程P3拥有一个R1和一个R2，还需申请一个R3）。
+3. 资源R1还剩0个，R2还剩0个，R3还剩1个。
+4. 因为P1需要申请R2，R2无剩余，所以P1阻塞；因为P2需要申请R1，R1无剩余，所以P2阻塞；因为P3需要申请R3，R3还剩一个，所以R3非阻塞。
+5. 所以P3可以顺利执行，当P3执行完成后，释放R1和R2，此时P1和P2都可以申请到需要的资源，那么P1和P2都可以正常执行完成。
+6. 如果所有的进程都是阻塞状态，那么此时发生死锁。
+
+## 存储管理
+
+## 设备管理
+
+## 文件管理
+
+## 作业管理
