--- a/docs/note/systemArchitecture/2.操作系统.md
+++ b/docs/note/systemArchitecture/2.操作系统.md
@@ -90,6 +90,14 @@ permalink: /note/system-architecture/operating-system/
 5. 所以P3可以顺利执行，当P3执行完成后，释放R1和R2，此时P1和P2都可以申请到需要的资源，那么P1和P2都可以正常执行完成。
 6. 如果所有的进程都是阻塞状态，那么此时发生死锁。
 
+### 信号量
+
+P操作，申请资源（S=S-1），如果S<0，说明当前进程没有资源可以获取，需要阻塞；
+
+V操作，释放资源（S=S+1），如果S<0，说明当前还有`|S|`（S的绝对值）个进程在等待资源释放，如果S>0，说明当前有S个资源处于空闲状态；
+
+![4zxrVH](https://qiqiang.oss-cn-hangzhou.aliyuncs.com/muan/4zxrVH.png)
+
 ## 存储管理
 
 ## 设备管理
