--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -23,20 +23,20 @@ permalink: /dev/271d86/
 12. 免费的接口管理和调试工具 [**ApiFox**](https://www.apifox.cn/)；
 13. BT种子下载工具 [**qbittorrent**](https://github.com/qbittorrent/qBittorrent)，[tracker 配置地址](https://github.com/ngosang/trackerslist/blob/master/trackers_all.txt)s；
 14. MacOS 控制外接显示器的小工具，可以调节亮度和声音 [MonitorControl](https://github.com/MonitorControl/MonitorControl/releases)；
-15. jvm可视化分析工具[VisualVm](https://visualvm.github.io/download.html)，下载后需要配置Java环境；
-16. MacOS 免费截图工具[iShot](https://www.better365.cn/ishot.html)，想要高级功能可以买断pro版本；
-17. MacOS VPN 代理工具[ClashX](https://github.com/yichengchen/clashX/releases)和增强版[ClashX Pro](https://install.appcenter.ms/users/clashx/apps/clashx-pro/distribution_groups/public)；
+15. jvm可视化分析工具 [VisualVm](https://visualvm.github.io/download.html)，下载后需要配置Java环境；
+16. MacOS 免费截图工具 [iShot](https://www.better365.cn/ishot.html)，想要高级功能可以买断pro版本；
+17. MacOS VPN 代理工具 [ClashX](https://github.com/yichengchen/clashX/releases)和增强版[ClashX Pro](https://install.appcenter.ms/users/clashx/apps/clashx-pro/distribution_groups/public)；
 
 ## 网址推荐
 
-1. 一个免费的 mac 软件下载网址[**麦氪搜**](https://www.imacso.com/)； 
-2. 开发技术书籍资源网站[**搬书匠**](http://www.banshujiang.cn/)；
+1. 一个免费的 mac 软件下载网址 [**麦氪搜**](https://www.imacso.com/)； 
+2. 开发技术书籍资源网站 [**搬书匠**](http://www.banshujiang.cn/)；
 3. Jdk 下载网站 [**injdk**](https://www.injdk.cn/)；
 4. 纯净操作系统下载网站 [**I TELL YOU**](https://next.itellyou.cn/)；
 5. 英文命名神器，解救你的二级英语水平 [**CODEIF**](https://unbug.github.io/codelf/)；
 6. 免费的在线文件转换工具 [**cloudconvert**](https://cloudconvert.com/)；
 7. 完全免费、易于使用、丰富的PDF处理工具 [**ilovepdf**](https://www.ilovepdf.com/zh-cn)；
-8. 免费的静态服务器资源托管网站[**Vercel**](https://vercel.com)；
+8. 免费的静态服务器资源托管网站 [**Vercel**](https://vercel.com)；
 
 
 ## 镜像中心
@@ -48,20 +48,21 @@ permalink: /dev/271d86/
 
 ## IDEA 插件推荐
 
-1. [Alibaba Java Coding Guidelines](https://plugins.jetbrains.com/plugin/10046-alibaba-java-coding-guidelines)阿里巴巴java编码规范指南；
-2. [Apifox Helper](https://plugins.jetbrains.com/plugin/20549-apifox-helper)导出Api接口到[**ApiFox**](https://www.apifox.cn/)；
-3. [Rainbow Brackets](https://plugins.jetbrains.com/plugin/10080-rainbow-brackets)给你的代码加点颜色；
-4. [Sequence Diagram](https://plugins.jetbrains.com/plugin/8286-sequence-diagram)生成代码时序图的插件；
-5. [Translation](https://plugins.jetbrains.com/plugin/8579-translation)翻译插件，解救你的二级英语；
-6. [GsonFormatPlus](https://plugins.jetbrains.com/plugin/14949-gsonformatplus)将json转为实体类，少写一些代码多摸一点鱼;
+1. [Alibaba Java Coding Guidelines](https://plugins.jetbrains.com/plugin/10046-alibaba-java-coding-guidelines) 阿里巴巴 java 编码规范指南；
+2. [Apifox Helper](https://plugins.jetbrains.com/plugin/20549-apifox-helper) 导出 Api 接口到 [**ApiFox**](https://www.apifox.cn/)；
+3. [Rainbow Brackets](https://plugins.jetbrains.com/plugin/10080-rainbow-brackets) 给你的代码加点颜色；
+4. [Sequence Diagram](https://plugins.jetbrains.com/plugin/8286-sequence-diagram) 生成代码时序图的插件；
+5. [Translation](https://plugins.jetbrains.com/plugin/8579-translation) 翻译插件，解救你的二级英语；
+6. [GsonFormatPlus](https://plugins.jetbrains.com/plugin/14949-gsonformatplus) 将json转为实体类，少写一些代码多摸一点鱼;
 
 ## Chromium 浏览器引擎插件推荐
 
-1. 网页Json数据格式化插件[JSON Formatter](https://chrome.google.com/webstore/detail/json-formatter/bcjindcccaagfpapjjmafapmmgkkhgoa)；
-2. 修改请求头信息的插件[ModHeader](https://chrome.google.com/webstore/detail/modheader-modify-http-hea/idgpnmonknjnojddfkpgkljpfnnfcklj)；
-3. 广告拦截插件[uBlock Origin](https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm)；
-4. 腾讯出品的划词翻译插件[腾讯翻译](https://chrome.google.com/webstore/detail/%E8%85%BE%E8%AE%AF%E7%BF%BB%E8%AF%91/lkjkfecdnfjopaeaibboihfkmhdjmanm)；
-5. 标签页插件[WeTab](https://chrome.google.com/webstore/detail/wetab-%E5%85%8D%E8%B4%B9chatgpt%E6%96%B0%E6%A0%87%E7%AD%BE%E9%A1%B5/aikflfpejipbpjdlfabpgclhblkpaafo)和[iTab](https://chrome.google.com/webstore/detail/itab%E6%96%B0%E6%A0%87%E7%AD%BE%E9%A1%B5%E5%85%8D%E8%B4%B9chatgpt/mhloojimgilafopcmlcikiidgbbnelip)；
+1. 网页Json数据格式化插件 [JSON Formatter](https://chrome.google.com/webstore/detail/json-formatter/bcjindcccaagfpapjjmafapmmgkkhgoa)；
+2. 修改请求头信息的插件 [ModHeader](https://chrome.google.com/webstore/detail/modheader-modify-http-hea/idgpnmonknjnojddfkpgkljpfnnfcklj)；
+3. 广告拦截插件 [uBlock Origin](https://chrome.google.com/webstore/detail/ublock-origin/cjpalhdlnbpafiamejdnhcphjbkeiagm)；
+4. 腾讯出品的划词翻译插件 [腾讯翻译](https://chrome.google.com/webstore/detail/%E8%85%BE%E8%AE%AF%E7%BF%BB%E8%AF%91/lkjkfecdnfjopaeaibboihfkmhdjmanm)；
+5. 标签页插件 [WeTab](https://chrome.google.com/webstore/detail/wetab-%E5%85%8D%E8%B4%B9chatgpt%E6%96%B0%E6%A0%87%E7%AD%BE%E9%A1%B5/aikflfpejipbpjdlfabpgclhblkpaafo) 和 [iTab](https://chrome.google.com/webstore/detail/itab%E6%96%B0%E6%A0%87%E7%AD%BE%E9%A1%B5%E5%85%8D%E8%B4%B9chatgpt/mhloojimgilafopcmlcikiidgbbnelip)；
+5. 程序员开发常用工具 [Ctools](https://github.com/baiy/Ctool)；
 
 ## 开发配置
 
