新增计算机网络

--- a/docs/linux/10.Linux简单有趣的命令.md
+++ b/docs/linux/10.Linux简单有趣的命令.md
@@ -63,8 +63,7 @@ sshpass -p {password} ssh -p 22 {username}@{ip}
 
 ssh 还可以实现跳板机隧道功能。
 
-如本机 **Local** 想要访问 **Server** 的 **Port** 端口，但是 **Server** 是在内网，无法访问，但是跳板机 **Jump** 可以访问 *
-*Server**，而 **Local**
+如本机 **Local** 想要访问 **Server** 的 **Port** 端口，但是 **Server** 是在内网，无法访问，但是跳板机 **Jump** 可以访问 **Server**，而 **Local**
 可以访问跳板机，此时可以使用ssh实现隧道功能。
 
 ```shell
