--- a/docs/note/systemArchitecture/5.计算机网络.md
+++ b/docs/note/systemArchitecture/5.计算机网络.md
@@ -5,3 +5,357 @@ permalink: /note/system-architecture/network/
 ---
 
 # 计算机网络
+
+## 网络功能和分类
+
+### 分类
+
+1. 总线型：利用率低，干扰大，价格低；
+2. 星形：交换机形成的局域网、中央单元负荷大；
+3. 环形：流动方向固定、效率低难扩充；
+4. 树形：总线型的扩充、分级结构；
+5. 分布式：任意节点连接、管理难、成本高；
+
+### 通信技术
+
+计算机网络是利用通信技术将数据从一个结点传送到另一结点的过程。
+
+通信技术是计算机网络的基础。信道可分为物理信道和逻辑信道。物理信道由传输介质和设备组成，根据传输介质的不同，分为无线信道和有线信道。逻辑信道是指在数据发送端和接收端之间存在的一条虛拟线路，可以是有连接的或无连接的。逻辑信道以物理信道为载体。
+
+发信机进行的信号处理包括信源编码、 信道编码、交织、脉冲成形和调制。相反地，收信机进行的信号处理包括解调、采样判决、去交织、信道译码和信源译码。
+
+如果同时传递多路数据就需要复用技术和多址技术。复用技术是指在一条信道上同时传输多路数据的技术，如 TDM 时分复用、FDM 频分复用和 CDM 码分复用等。多址技术是指在一条线上同时传输多个用户数据的技术，在接收端把多个用户的数据分离( TDMA 时分多址、FDNA 频分多址和 CDMA 码分多址）。
+
+作为新一代的移动通信技术，5G 特征体现在以下方面。
+
+1. 基于 OFDM 优化的波形和多址接入
+2. 实现可扩展的 0FDM 间隔参数配直
+3. OFDM 加窗提高多路传输效率
+4. 灵活框架设计
+5. 大规模 MIMO：最多 256 根天线
+6. 毫米波：场率大王 24CHz 以上的频段
+7. 频谱共享
+8. 牛讲的信道编码设计
+
+## OSI 七层模型
+
+| 分层       | 功能                                                         | 单位    | 协议                                                   | 设备           |
+| ---------- | ------------------------------------------------------------ | ------- | ------------------------------------------------------ | -------------- |
+| 应用层     | 对用户不透明的提供各种服务，如 Email、Http                   | 数据    |                                                        | 网关           |
+| 表示层     | 实现数据转换（包括格式转换、压缩、加密等），提供标淮的应用接口、公用的通信服务、公共数据表示方法。 |         |                                                        | 网关           |
+| 会话层     | 建立通信进程的逻辑名字与物理名字之间的联系，提供进程之问建立、管理和终止会话的方法，处理同步与恢复问题。 |         |                                                        | 网关           |
+| 传输层     | 提供端到端间可靠的、透明的数据传输，保证报文顺序的正确性、数据的完整性。 | 报文段  | TCP、UDP                                               | 网关           |
+| 网络层     | 在源节点-目的节点之问进行路由选择、拥塞控制、顺序控制、传送包，保证报文的正确性。网络层控制着通信子网的运行，因市它又称为通信子网层。 | IP 分组 | IP、ICMP、IGMP、ARP、RARP                              | 路由器         |
+| 数据链路层 | 把不可靠的信道变为可靠的信道。为此将比特组成帧，在链路上提供点到点的帧传输，并进行差错控制、流量控制等。 | 帧      | SDLG、 HDLG、 LAPB、 PPP、STP、帧中继等、 IEEE802、ATM | 交换器、网桥   |
+| 物理层     | 在链路上透明地传输位。需要完成的工作包括线路配置、确定数据传输模式、确定信号形式、对信号进行编码、连接传输介质。为此定义了建立、维护和拆除物理链路所具备的机械特性、电气特性、功能特性以及规程特性。 | 比特    | EIA/TIA RS-232, RS-449,V. 35, RJ-45, FDDI              | 中继器、集线器 |
+
+## 局域网和广域网协议
+
+以太网是一种计算机局域网组网技术。
+
+以太网规范 **IEEE 802.3** 是重要的局域网协议。
+
+以太帧结构：
+
+![rUOb4I](https://qiqiang.oss-cn-hangzhou.aliyuncs.com/muan/rUOb4I.png)
+
+无线局域网 WLAN 标准技术：**IEEE 802.11**
+
+广域网技术：
+
+同步光网络（SONET，利用光纤进行数宇化信急通信）、数字数据网 （DON； 利用数字信道提供半永久性连接电路以传输数据）、帧中继（FR，数据包交换技术）、异步传输技术（ATM，以信元为基础的面向连接的一种分组交换和复用技术）
+
+## TCP/IP 协议
+
+网络协议三要素：语法、语义、时序。
+
+语法部分规定数据传输的格式；语义部分规定所要完成的功能；时序部分规定执行各种操作的条件、顺序关系等。
+
+![8WbJUN](https://qiqiang.oss-cn-hangzhou.aliyuncs.com/muan/8WbJUN.png)
+
+### 网络层协议
+
+#### IP 协议
+
+网络层最重要的协议，在源地址和目标地址之间传输数据报，**无连接、不可靠**。
+
+#### ICMP 协议
+
+因特网控制报文协议。用于 IP 主机和路由器之间传递控制消息。控制消息是指网络是否可通、主机是否可达、路由是否可用等网络本身的消息。
+
+#### ARP 和 RARP 协议
+
+地址解析协议。ARP 是将 IP 地址转换为物理地址，RARP 是将物理地址转换为 IP 地址。
+
+#### IGMP 协议
+
+网络组管理协议。允许因特网中的计算机参加多播，是计算机用作向相邻多目路由器报告多目组成员的协议，支持组播。
+
+### 传输层协议
+
+#### TCP 协议
+
+整个 TCP/IP 协议族中最重要的协议之一，在 IP 协议提供的不可靠数据基础上，采用了重发技术，为应用程序提供了一个可靠的、面向连接的、全双工的数据传输服务。一般用于传输数据量比较少且对可靠性要求高的场景。
+
+#### UDP 协议
+
+UDP 协议是一种不可靠、无连接的协议，有助于提高传输速率，一般用于传输数据量大，对可靠性要求不高但要求速度快的场景。
+
+### 应用层协议
+
+#### FTP 和 SFTP
+
+文件传输协议。一般占用端口为 20 和 21。
+
+#### HTTP 和 HTTPS
+
+超文本传输协议。一般占用端口为 80 和 443。
+
+#### SMTP 和 POP3
+
+简单邮件传输协议，SMTP 用于发送邮件、POP3 用于接收邮件。POP3 占用端口为 110，SMTP 占用端口为 25。
+
+#### Telnet
+
+远程连接协议。一般占用端口为 23。
+
+#### SNMP
+
+简单网络管理协议
+
+#### DHCP
+
+动态主机配置协议。一般占用端口为 67（服务端）和 68（客户端）。
+
+#### DNS
+
+域名解析协议。一般占用端口为 53。
+
+## 交换技术
+
+数据在网络中转发通常离不开交换机。人们日常使用的计算机通常就是通过交换机接入网络的。
+
+交换机功能包括：
+
+1. 集线功能。提供大量可供线缆连接的端口达到部署星状拓扑网络的目的。
+2. 中继功能。在转发帧时重新产生不失真的电信号。
+3. 桥接功能。在内置的端口上使用相同的转发和过滤逻辑。
+4. 隔离冲突域功能。将部署好的局域网分为多个冲突域，而每个冲突域都有自己独立的带宽，以提高交换机整体宽带利用效率。
+
+交换机需要实现的功能如下所述：
+
+1. 转发路径学习。根据收到数据帧中的源 MAC 地址建立该地址同交换机端口的映射，写入 MAC
+   地址表中。
+2. 数据转发。如果交换机根据数据帧中的目的 MAC 地址在建立好的 MAC 地址表中查询到了，
+   就向对应端口进行转发。
+3. 数据泛洪。如果数据帧中的目的 MAC 地址不在 MAC 地址表中，则向所有端口转发，也就是
+   泛洪。广播帧和组播帧向所有端口（不包括源端口）进行转发。
+4. 链路地址更新。MAC 地址表会每隔一定时间（如 300s）更新一次。
+
+## 路由技术
+
+路由功能由路由器来提供，具体包括：
+
+1. 异种网络互连，比如具有异种子网协议的网络互连：
+2. 子网协议转换，不同子网间包括局域网和广域网之间的协议转换：
+3. 数据路曲，即将数据从一个网络依据路由规则转发到另一个网络：
+4. 速率适配，利用缓存和流控协议进行适配：
+5. 隔离网络，防止广播风暴，实现防火墙；
+6. 报文分片和重组，超过接口的MTU 报文被分片，到达目的地之后的报文被重组：
+7. 备份、流量控制，如主备线路的切换和复杂流量控制等。
+
+路由器工作在 OSI 七层协议中的第3 层，即网络层。其主要任务是接收来源于一个网络接口的数据包，通常根据此数据包的目地址决定待转发的下一个地址（即下一跳地址）。路由器中维持着数据转发所需的路由表，所有数据包的发送或转发都通过查找路由表来实现。这个路由表可以静态配置，也可以通过动态路由协议自动生成。
+
+一般来说，路由协议可分为内部网关协议（IGP） 和外部网关协议（EGP）两类。
+
+网络建设工程可分为**网络规划、网络设计和网络实施**三个环节。
+
+## 传输介质
+
+### 双绞线
+
+将多根铜线按规则缠绕在一起，能够减少干扰；分为无屏蔽双绞线 UTP 和屏蔽双绞线 STP，都是由一对铜线簇组成，也就是俗称的网线；双绞线传输距离在 100M 以内。
+
+双绞线传输电信号。
+
+### 光纤
+
+由纤芯和包层组成，传输的光信号在纤芯中传输。
+
+多模光纤 MMF：纤芯半径较大，因此可以传输多种不同的信号，光信号在光纤中以全反射的形式传输，采用发光二极管 LED 作为光源，成本低，但是传输的效率和可靠性都较低，适合短距离传输，传输距离与传输速率相关，速率为 100Mbps 时为 2km，速率为 1000Mbps 时为 550m。
+
+单模光纤 SMF：纤芯半径很小，一般只能传输一种信号，采用激光二极管 LD 作为光源，并且只支持激光信号传播，同样是全反射形式传播，只不过反射角很大，所以看起来像是一条直线。成本高，但是传输距离远，可靠性高。传输距离可达 5km。
+
+### 无线信道
+
+* 无线电波
+  * 长波
+  * 中波
+  * 短波
+  * 超短波
+  * 微波
+    * 地面微波
+    * 卫星微波
+* 红外光波
+  * 近红外线
+  * 中红外线
+  * 远红外线 
+
+## 交换方式
+
+#### 电路交换
+
+通信的两方建立专用电路，特点是面向连接、实时性高、链路利用率低，一般用于语音视频通信。
+
+#### 报文交换
+
+以报文为单位，存储转发模式。接收到数据后先存储，进行差错校验，没有错误则转发，有错误则丢弃，因此会有延时，但可靠性高，是面向无连接的。
+
+#### 分组交换
+
+##### 数据报
+
+现在主流的交换方式，各个分组携带地址信息，自由的原则不同的路由路径传送到接收方，接收方接收到所有数据后再重新组装成原数据，是面向无连接的，不可靠的。
+
+##### 虚电路
+
+发送方发送一个分组，接收方收到后二者之间就建立了一个虚拟的通信线路，二者之间的分组数据交互都通过这条线路传送，在空闲的时候这条线路也可以传输其他数据，是面向连接的，可靠的。
+
+##### 信元交换
+
+异步传输模式 ATM 采用的交换方式，本质是按照虚电路方式进行转发，只不过信元是固定长度的分组，共 53B，其中 5B 为头部，48B 为数据域，也是面向连接的，可靠的。
+
+## IP 地址
+
+ip 地址是 32 位的二进制代码，每隔 8 位插入一个空格，可提高可读性，为了方便理解和设置，一般会采用**点分十进制**方法表示。32 位分为 4 段，每一段占 8 位，每一段可以表示的范围是 0-255。
+
+### 分类 IP 地址
+
+IP 地址分为网络号和主机号
+
+| 类别     | 点分十进制                                   | 二进制                                                       | 网络号范围 | 特点                                           |
+| -------- | -------------------------------------------- | ------------------------------------------------------------ | ---------- | ---------------------------------------------- |
+| A 类单播 | **0**.0.0.0<br>---<br>**127**.255.255.255    | <u>**0**0000000</u> 00000000 00000000 00000000<br>---<br/><u>**0**1111111</u> 11111111 11111111 11111111 | 0-127      | 网络号占 8 位，首位是 0，最大可以表示 2^24-2   |
+| B 类单播 | **128**.0.0.0<br>---<br/>**191**.255.255.255 | <u>**10**000000 00000000</u> 00000000 00000000<br/>---<br/><u>**10**111111 11111111</u> 11111111 11111111 | 128-191    | 网络号占 16 位，首位是 10，最大可以表示 2^16-2 |
+| C 类单播 | **192**.0.0.0<br>---<br/>**223**.255.255.255 | <u>**110**00000 00000000 00000000</u> 00000000<br/>---<br/><u>**110**11111 11111111 11111111</u> 11111111 | 192-223    | 网络号占 24 位，首位是 10，最大可以表示 2^8-2  |
+| D 类组播 | **224**.0.0.0<br>---<br/>**239**.255.255.255 | **1110**0000 00000000 00000000 00000000<br/>---<br/>**1110**1111 11111111 11111111 11111111 | 224-239    |                                                |
+| E 类保留 | 240.0.0.0<br>---<br/>255.255.255.255         | **1111**0000 00000000 00000000 00000000<br/>---<br/>**1111**1111 11111111 11111111 11111111 | 240-255    |                                                |
+
+### 无分类编址
+
+不按 ABC 类规则划分，自动规定网络号。无分类编址格式为 **IP 地址/网络号**，如：
+
+**128.168.0.11/20**表示的 IP 地址为**128.168.0.11**，其中网络号占 20 位，那么主机号占用 32-20=12 位。
+
+### 特殊 IP 地址
+
+共有地址：通过它直接访问因特网，是全网唯一的 IP 地址。
+
+私有地址：属于非注册地址，专门为组织机构内部使用，不能直接访问因特网。一下是我有地址范围：
+
+| 类别 | IP 地址范围 | 网络号 | 网络数 |
+| :----: | ----------- | ------ | ------ |
+| A    | 10.0.0.0 - 10.255.255.255 | 10 | 1 |
+| B    | 172.16.0.0 - 172.31.255.255 | 172.16 - 172.31 | 16 |
+| C    | 192.168.0.0 - 192.168.255.255 | 192.168.0 - 192.168.255 | 256 |
+
+### 子网划分
+
+通过子网划分的方法划分网络，即自定义网络号位数，能自定义主机号位数，就能根据主机个数来划分出最合适的方案，不会造成资源浪费。
+
+一般 IP 地址按标准划分为 ABC 类后，可以进行再一步的划分，将主机号拿出几位作为子网号，就可以划分出多个子网，此时 IP 地址组成为**网络号+子网号+主机号**。
+
+网络号和子网号都为 1，主机号都为 0，这样的地址是**子网掩码**。
+
+子网号可以全 0 或者全 1，主机号不能为全 0 或全 1，因此，主机数需要 -2，而子网数不用。
+
+### IPv6
+
+主要是为了解决 IPv4 地址数不够用的情况而提出的设计方案，IPv6 具有以下特性：
+
+* IPv6地址长度为 128 位，地址空问增大了 2^96 倍；
+* 灵活的 IP 报文头部格式，使用一系列固定格式的扩展头部取代了 IPv4 中可变长度的选项字段。IPv6 中选项部分的出现方式也有所变化，使路由器可以简单撸过选项而不做任何处理，加快了报文处理速度；
+*  IPv6 简化了报文头部格式，加快报文转发，提高了吞吐量；
+* 提高安全性，身份认证和隐私权是1Pv6的关键特性；
+* 支持更多的服务类型；
+* 允许协议继续演变，增加新的功能，使之适应未来技术的发展。
+
+IPv4 和 IPv6 过渡期间采用的技术：
+
+1. 双协议栈；主机同时运行两套协议栈。
+2. 隧道技术；在 IPv4 网络上建立一条能够传输 IPv6 数据报的隧道。
+3. 翻译技术；利用一台专门的翻译设备，在纯 IPv4 和 IPv6 网络之间转换 IP 报头的地址，同时根据协议不同对分组做响应的语义翻译。
+
+## 网络规划与设计
+
+三层模型将网络划分为**核心层**、**汇聚层**和**接入层**，每一层都有着特定的作用。
+
+核心层提供不同区域之问的最佳路由和高速数据传送；
+
+汇聚层将网络业务连接到接入层，井且实施与安全、流量、负载和路由相关的策略；
+
+接入层为用户提供了 在本地网段访问应用系统的能力，还要解决相邻用户之问的互访需要，接入层要负责一些用户信息（例如用户1P地址、MAC地址和访问 日志等）的收集工作和用户管理功能（包括认证和计费等）。
+
+### 建筑物综合布线系统 PDS
+
+1. 工作区子系统：实现工作区终端设备到水平子系统的信息插座之间的互联；
+2. 水平布线子系统：实现信息插座和管理子系统之间的连接；
+3. 设备间子系统：实现中央主配线架与各种不同设备之间的连接；
+4. 垂直干线子系统：实现各楼层设备间子系统之间的互联；
+5. 管理子系统：连接各楼层水平布线子系统和垂直干缆线，负责连接控制其他子系统为连接其他子系统提供连接手段；
+6. 建筑群子系统：各个建筑物通信系统之间的互联；
+
+## 磁盘冗余阵列 RAID
+
+RAID 即磁盘冗余阵列技术，将数据分散存储在不同磁盘中，可并行读取，可冗余存储，提高磁盘访问速度，保障数据安全性。
+
+RAID0 将数据分散存储在不同磁盘中，磁盘利用率 100%，访问速度最快，但是没有提供冗余和错误修复技术；
+
+RAID1 在成对的独立磁盘上产生互为备份的数据，增加存储可靠性，可以纠错，但磁盘利用率只有 50%；
+
+RAID5 在所有磁盘交叉的存储数据及奇偶校验信息，所有的校验信息存储总量为一个磁盘容量，但是分布存储在不同的磁盘上，读写指针可同时操作，磁盘利用率是 `(N-1)/N`；
+
+## 网络存储技术
+
+1. 直接附加存储 **DAS**：是指将存储设备通过 SCS1 接口直接连接到一台服务器上使用，其本身是硬
+   件的堆叠，存储操作依赖于服务器，不带有任何存储操作系统。
+
+   存在问题：在传递距离、连接数量、传输速率等方面都受到限制。容量难以扩展升级；数据处理和传输能力降低；服务器异常会波及存储器。
+
+2. 网络附加存储 **NAS**：通过网络接口与网络直接相连，由用户通过网络访问，有独立的存储系统。NAS 存储设备类似于一个专用的文件服务器，去掉了通用服务器大多数计算功能，而仅仅提供文件系统功能。以数据为中心，将存储设备与服务器分离，其存储设备在功能上完全独立于网络中的主服务器。客户机与存储设备之间的数据访问不再需要文件服务器的千预，同时它允许客户机与存储设备之间进行直接的数据访问，所以不仅响应速度快，而且数据传输速率也很高。
+
+   NAS 的性能特点是进行小文件级的共享存取；支持即插即用；可以很经济的解决存储容量不足的问题，但难以获得满意的性能。
+
+3. 存储区域网 **SAN**：SAN 是通过 专用交换机将磁盘阵列与服务器连接起来的高速专用子网。它没有采用文件共享存取方式，而是采用块（block）级别存储。SAN 是通过专用高速网将一个或多个网络存储设备和服务器连接起来的专用存储系统，其最大特点是将存储设备从传统的以太网中分离了出来，成为独立的存储区域网络 SAN 的系统结构。根据数据传输过程采用的协议，其技术划分为 FCSAN（光纤通道）、IP SAN （IP网络）和1B SAN（无线带宽）技术。
+
+## 其他知识点
+
+### 网络地址翻译 NAT
+
+公司内有很多电脑，在公司局域网内可以互联通信，但是要访问外部因特网时，只提供固定的少量 IP 地址能够访问因特网，将公司所有电脑这个大的地址集合映射到能够访问因特网的少量 IP 地址集合的过程就称为 NAT。很明显，使用了 NAT 后，一个公司只有少量固定 IP 地址可以上网，大大减少了IP地址的使用量。
+
+### 默认网关
+
+一台主机可以有多个网关。默认网关的意思是一台主机如果找不到可用的网关，就把数据包发给默认指定的网关，由这个网关来处理数据包。现在主机使用的网关，一般指的是默认网关。默认网关的 IP 地址必须与本机 IP 地址在同一个网段内，即同网络号。
+
+### 虛拟局域网 VLAN
+
+是一组逻辑上的设备和用户，这些设备和用户并不受物理位置的限制，可以根据功能、部门及应用等因素将它们组织起来，相互之间的通信就好像它们在同一个网段中一样。
+
+VLAN 工作在 OSI 参考模型的第  2 层和第 3 层，一个 VLAN 就是一个广播域，VAN 之间的通信是通过第 3 层的路由器来完成的。
+
+今与传统的局域网技术相比较，VLAN 技术更加灵活，它具有以下优点：网络设备的移动、添加和修改的管理开销减少；可以控制广播活动；可提高网络的安全性。
+
+### 虚拟专用网 VPN
+
+是在公用网络上建立专用网络的技术。其之所以称为虚拟网，主要是因为整个 VPN 网络的任意两个节点之问的连接井没有传统专网所需的端到端的物理链路，而是架构在公用网络服务商所提供的网络平台，如nternet、ATM （异步传输模式）、Frame Relay （帧中继）等之上的逻辑网络，用户数据在逻辑链路中传输。
+
+### PPP
+
+安全认证介绍：PPP 的 NCP 可以承载多种协议的三层数据包。PPP使用LCP控制多种链路的参数（建立、认证、压缩、回拨）。
+
+PPP 的认证类型：pap 认证是通过二次握手建立认证（明文不加密），chap 挑战握手认证协议，通过三次握手建立认证（密文采用 MD5 加密）。PPP 的双向验证，采用的是chap的主验证风格。PPP 的加固验证，采用的是两种 (pap, chap）验证同时使用
+
+### 冲突域和广播域
+
+路由器可以阻断广播域和冲突域，交换机只能阻断冲突域，因此一个路由器下可以划分多个广播域和多个冲突域；一个交换机下整体是一个广搔域，但可以划分多个冲突域；而物理层设备集线器下整体作为一个冲突域和一个广播域。
