--- a/docs/note/systemArchitecture/6.系统配置与性能评价.md
+++ b/docs/note/systemArchitecture/6.系统配置与性能评价.md
@@ -90,14 +90,15 @@
 ## 阿姆达尔解决方法
 
 $$
-加速比=\frac {不使用增强部件时完成整个任务的时间} {使用增强部件时完成整个任务的时间}
+\text{加速比}=\frac {\text{不使用增强部件时完成整个任务的时间}} {\text{使用增强部件时完成整个任务的时间}}
 $$
 
 $$
-总加速比=\frac {原来的执行时间} {新的执行时间}=\frac 1 {(1 - 增强比例) + \frac {增强比例} {增强加速比}}
+\text{总加速比}=\frac {\text{原来的执行时间}} {\text{新的执行时间}}=\frac 1 {(1 - \text{增强比例}) + \frac {\text{增强比例}} {\text{增强加速比}}}
 $$
 
 如加速比为 5，增强比例为 30%，那么总加速比为：
+
 $$
-总加速比=\frac 1 {(1 - 0.3) + \frac {0.3} 5}
+\text{总加速比}=\frac 1 {(1 - 0.3) + \frac {0.3} 5}
 $$
