--- a/docs/dev/70.探索java中复杂的时区.md
+++ b/docs/dev/70.探索java中复杂的时区.md
@@ -1,7 +1,7 @@
 ---
 title: 探索java中复杂的时区
 date: 2023-08-12 22:10:20
-permalink: /dev/ajavatime/
+permalink: /dev/javatime/
 ---
 
 # 探索java中复杂的时区
@@ -27,7 +27,8 @@ UTC是根据原子钟来计算时间。
 2. Central Standard Time (Australia) UT+9:30
 3. China Standard Time UT+8:00
 4. Cuba Standard Time UT-4:00
-   所以为了避免歧义，现在有些地方用 CTT 来指代中国时区。
+   
+所以为了避免歧义，现在有些地方用 CTT 来指代中国时区。
 
 ### ISO
 
