--- a/docs/dev/30.Git常用操作.md
+++ b/docs/dev/30.Git常用操作.md
@@ -78,6 +78,18 @@ git merge origin/master --allow-unrelated-histories
 
 ## 标签
 
+```shell
+# 新增轻量级标签
+git tag <tag_name>
+# 新增带注释的标签
+git tag -a <tag_name> -m "Tag message"
+# 推送 tag
+git push --tags
+# 单独推送某个 tag
+git push origin <tag_name>
+```
+
+
 ## 配置信息
 
 查看配置用户名和邮箱
