--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -26,6 +26,7 @@ permalink: /dev/271d86/
 15. jvm可视化分析工具 [VisualVm](https://visualvm.github.io/download.html)，下载后需要配置Java环境；
 16. MacOS 免费截图工具 [iShot](https://www.better365.cn/ishot.html)，想要高级功能可以买断pro版本；
 17. MacOS VPN 代理工具 [ClashX](https://github.com/yichengchen/clashX/releases)和增强版[ClashX Pro](https://install.appcenter.ms/users/clashx/apps/clashx-pro/distribution_groups/public)；
+18. 免费截图工具 [snipaste](https://zh.snipaste.com/)；
 
 ## 网址推荐
 
