--- a/docs/dev/30.Git常用操作.md
+++ b/docs/dev/30.Git常用操作.md
@@ -62,7 +62,7 @@ git merge origin/master --allow-unrelated-histories
     ```
 
 3. 合并分支
-   
+
     ```bash
     git merge [name]
     ```
@@ -71,6 +71,12 @@ git merge origin/master --allow-unrelated-histories
 
    ```shell
    git branch --set-upstream-to=origin/remote_branch_name local_branch_name
+   ```
+
+5. 删除所有未关联远程的本地分支
+
+   ```shell
+   git branch -vv | grep ': gone]' | awk '{print $1}' | xargs git branch -D
    ```
 
    
