新增部分软件

--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -9,26 +9,26 @@ permalink: /dev/271d86/
 
 ## 软件推荐
 
-1. hosts切换工具 [**SwitchHosts**](https://www.electronjs.org/apps/switchhosts)，强烈推荐<Badge text="MacOS" type="tip" /><Badge text="Windows" type="tip" />；
+1. hosts切换工具 [**SwitchHosts**](https://www.electronjs.org/apps/switchhosts)，强烈推荐<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 2. 好看好用的 Redis GUI工具 [**AnotherRedisDesktopManager**](https://gitee.com/qishibo/AnotherRedisDesktopManager)。下载或者 MacOS 命令安装`brew install --cask another-redis-desktop-manager`；
-3. MacOS 取色工具 [**ColorSlurp**](https://apps.apple.com/cn/app/colorslurp/id1287239339?l=en&mt=12)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="tip" />；
+3. MacOS 取色工具 [**ColorSlurp**](https://apps.apple.com/cn/app/colorslurp/id1287239339?l=en&mt=12)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 4. 好用的邮箱工具 [**Spark**](https://sparkmailapp.com/zh)了<Badge text="MacOS" type="tip" />；
 5. **收费**终端工具 [**termius**](https://www.termius.com/)。该工具收费，可以网上找破解版<Badge text="MacOS" type="tip" />；
-6. 免费终端工具 [**tabby**](https://github.com/Eugeny/tabby/releases)，是 [termius](https://www.termius.com/) 的开源版<Badge text="MacOS" type="tip" /><Badge text="Windows" type="tip" />；
-7. 轻量级 Api 工具，Postman 替代品 [**hoppscotch**](https://hoppscotch.io/cn/)<Badge text="Web" type="tip" />；
-8. 免费好用的 Markdown 编辑器 [**Mark Text**](https://marktext.app/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="tip" />；
-9. 开源免费的图床工具，支持多种存储方式，下载地址 [**uPic**](https://github.com/gee1k/uPic/releases)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="tip" />；
-10. 开源免费的 kubernetes IDE 开发工具和可视化 Dashboard [**Lens**](https://github.com/lensapp/lens)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="tip" />；
-11. Zookeeper GUI 工具 [**PrettyZoo**](https://github.com/vran-dev/PrettyZoo/releases)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="tip" />；
-12. 免费的接口管理和调试工具 [**ApiFox**](https://www.apifox.cn/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="tip" />；
-13. BT种子下载工具 [**qbittorrent**](https://github.com/qbittorrent/qBittorrent)，[tracker 配置地址](https://github.com/ngosang/trackerslist/blob/master/trackers_all.txt)<Badge text="Windows" type="tip" />；
+6. 免费终端工具 [**tabby**](https://github.com/Eugeny/tabby/releases)，是 [termius](https://www.termius.com/) 的开源版<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
+7. 轻量级 Api 工具，Postman 替代品 [**hoppscotch**](https://hoppscotch.io/cn/)<Badge text="Web" type="danger" />；
+8. 免费好用的 Markdown 编辑器 [**Mark Text**](https://marktext.app/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
+9. 开源免费的图床工具，支持多种存储方式，下载地址 [**uPic**](https://github.com/gee1k/uPic/releases)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
+10. 开源免费的 kubernetes IDE 开发工具和可视化 Dashboard [**Lens**](https://github.com/lensapp/lens)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
+11. Zookeeper GUI 工具 [**PrettyZoo**](https://github.com/vran-dev/PrettyZoo/releases)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
+12. 免费的接口管理和调试工具 [**ApiFox**](https://www.apifox.cn/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
+13. BT种子下载工具 [**qbittorrent**](https://github.com/qbittorrent/qBittorrent)，[tracker 配置地址](https://github.com/ngosang/trackerslist/blob/master/trackers_all.txt)<Badge text="Windows" type="info" />；
 14. MacOS 控制外接显示器的小工具，可以调节亮度和声音 [MonitorControl](https://github.com/MonitorControl/MonitorControl/releases)<Badge text="MacOS" type="tip" />；
-15. jvm可视化分析工具 [**VisualVm**](https://visualvm.github.io/download.html)，下载后需要配置Java环境<Badge text="MacOS" type="tip" /><Badge text="Windows" type="tip" />；
+15. jvm可视化分析工具 [**VisualVm**](https://visualvm.github.io/download.html)，下载后需要配置Java环境<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 16. MacOS 免费截图工具 [**iShot**](https://www.better365.cn/ishot.html)，想要高级功能可以买断pro版本<Badge text="MacOS" type="tip" />；
 17. MacOS VPN 代理工具 [**ClashX**](https://github.com/yichengchen/clashX/releases)和增强版[ClashX Pro](https://install.appcenter.ms/users/clashx/apps/clashx-pro/distribution_groups/public)<Badge text="MacOS" type="tip" />；
-18. 免费截图工具 [**snipaste**](https://zh.snipaste.com/)<Badge text="MacOS" type="tip" />；
+18. 免费截图工具 [**snipaste**](https://zh.snipaste.com/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 19. 免费的Windows Dock 美化软件 [**Nexus**](https://www.winstep.net/nexus.asp)<Badge text="MacOS" type="tip" />；
-20. 免费的 Windows 动态壁纸软件 [**lively wallpaper**](https://github.com/rocksdanister/lively/releases)，美化你的桌面<Badge text="Windows" type="tip" />；
+20. 免费的 Windows 动态壁纸软件 [**lively wallpaper**](https://github.com/rocksdanister/lively/releases)，美化你的桌面<Badge text="Windows" type="info" />；
 21. 收费的（可破解） MacOS 动态壁纸软件 [**Dynamic Wallpaper for Mac**](https://macoshome.com/app/utilities/6908.html)<Badge text="MacOS" type="tip" />；
 
 ## 网址推荐
