新增部分软件

--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -130,3 +130,13 @@ syntax on
 # 自动缩进
 set autoindent
 ```
+
+### Macos Dock 加速隐藏和显示
+
+```shell
+# 加快速度
+defaults write com.apple.Dock autohide-delay -float 0 && killall Dock
+# 恢复默认
+defaults delete com.apple.Dock autohide-delay && killall Dock
+```
+
