--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -30,6 +30,7 @@ permalink: /dev/271d86/
 19. 免费的Windows Dock 美化软件 [**Nexus**](https://www.winstep.net/nexus.asp)<Badge text="MacOS" type="tip" />；
 20. 免费的 Windows 动态壁纸软件 [**lively wallpaper**](https://github.com/rocksdanister/lively/releases)，美化你的桌面<Badge text="Windows" type="info" />；
 21. 收费的（可破解） MacOS 动态壁纸软件 [**Dynamic Wallpaper for Mac**](https://macoshome.com/app/utilities/6908.html)<Badge text="MacOS" type="tip" />；
+22. 免费的 Windows 优化软件 [**optimizer**]([text](https://github.com/hellzerg/optimizer))<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 
 ## 网址推荐
 
