--- a/docs/dev/30.Git常用操作.md
+++ b/docs/dev/30.Git常用操作.md
@@ -93,6 +93,8 @@ git tag -a <tag_name> -m "Tag message"
 git push --tags
 # 单独推送某个 tag
 git push origin <tag_name>
+# 删除标签
+git tag -d <tag_name>
 ```
 
 
