--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -140,3 +140,12 @@ defaults write com.apple.Dock autohide-delay -float 0 && killall Dock
 defaults delete com.apple.Dock autohide-delay && killall Dock
 ```
 
+### node 和 npm 安装
+
+#### node 安装和版本管理
+
+```shell
+# 
+brew install nvm
+```
+
