--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -30,6 +30,7 @@ permalink: /dev/271d86/
 20. 免费的 Windows 动态壁纸软件 [**lively wallpaper**](https://github.com/rocksdanister/lively/releases)，美化你的桌面<Badge text="Windows" type="info" />；
 21. 收费的（可破解） MacOS 动态壁纸软件 [**Dynamic Wallpaper for Mac**](https://macoshome.com/app/utilities/6908.html)<Badge text="MacOS" type="tip" />；
 22. 免费的 Windows 优化软件 [**optimizer**]([text](https://github.com/hellzerg/optimizer))<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
+23. 有颜也有料，多彩更出彩，一个更现代化的Redis桌面管理客户端[Tiny RDM](https://redis.tinycraft.cc/zh/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 
 ## 网址推荐
 
@@ -145,7 +146,6 @@ defaults delete com.apple.Dock autohide-delay && killall Dock
 #### node 安装和版本管理
 
 ```shell
-# 
+# 安装 node 版本管理工具
 brew install nvm
 ```
-
