新增部分配置

--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -149,3 +149,19 @@ defaults delete com.apple.Dock autohide-delay && killall Dock
 # 安装 node 版本管理工具
 brew install nvm
 ```
+
+根据提示在 .zshrc 文件中加入以下配置
+
+```shell
+export NVM_DIR="$HOME/.nvm"
+   [ -s "/usr/local/opt/nvm/nvm.sh" ] && \. "/usr/local/opt/nvm/nvm.sh"  # This loads nvm
+   [ -s "/usr/local/opt/nvm/etc/bash_completion.d/nvm" ] && \. "/usr/local/opt/nvm/etc/bash_completion.d/nvm"  # This     loads nvm bash_completion
+```
+
+### 配置从命令行用 Vscode 打开文件
+
+打开 .zshrc 文件编辑，加入一下代码
+
+``` shell
+alias code="/Applications/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code"
+```
