--- a/docs/dev/30.Git常用操作.md
+++ b/docs/dev/30.Git常用操作.md
@@ -70,7 +70,7 @@ git merge origin/master --allow-unrelated-histories
 4. 关联本地分支与远程分支
 
    ```shell
-   git branch --set-upstream-to=origin/remote_branch_name local_branch_name
+   git branch --set-upstream-to=origin/[remote_branch_name] [local_branch_name]
    ```
 
 5. 删除所有未关联远程的本地分支
@@ -78,7 +78,11 @@ git merge origin/master --allow-unrelated-histories
    ```shell
    git branch -vv | grep ': gone]' | awk '{print $1}' | xargs git branch -D
    ```
+6. 从某个提交切出新分支
 
+   ```shell
+   git checkout -b [new-branch-name] [commit]
+   ```
    
 
 
