--- a/docs/advancedTechnology/llm/ 10.本地使用OLLAMA搭建大模型.md
+++ b/docs/advancedTechnology/llm/ 10.本地使用OLLAMA搭建大模型.md
@@ -11,25 +11,19 @@ permalink: /advancedTechnology/llm/start/
 
 ### 特点
 
-1. **大量参数**：
-   - 大模型通常包含数亿到数千亿个参数。这些参数通过大规模的数据集训练，使模型能够捕捉和生成复杂的语言模式和结构。
+1. **大量参数**：大模型通常包含数亿到数千亿个参数。这些参数通过大规模的数据集训练，使模型能够捕捉和生成复杂的语言模式和结构。
 
-2. **强大的语言理解和生成能力**：
-   - 大模型在处理各种语言任务时表现出色，如文本生成、翻译、摘要、问答等。
+2. **强大的语言理解和生成能力**：大模型在处理各种语言任务时表现出色，如文本生成、翻译、摘要、问答等。
 
-3. **预训练和微调**：
-   - 大模型一般先通过海量文本数据进行预训练，学习广泛的语言知识和模式，然后通过微调（fine-tuning）在特定任务或领域数据上进一步优化。
+3. **预训练和微调**：大模型一般先通过海量文本数据进行预训练，学习广泛的语言知识和模式，然后通过微调（fine-tuning）在特定任务或领域数据上进一步优化。
 
-4. **多功能性**：
-   - 大模型可以用于多种任务，不需要为每个任务单独训练一个新模型，只需通过调整提示词或微调即可适应新任务。
+4. **多功能性**：大模型可以用于多种任务，不需要为每个任务单独训练一个新模型，只需通过调整提示词或微调即可适应新任务。
 
 ### 发展历程
 
-1. **早期模型**：
-   - 早期的语言模型，如Word2Vec和GloVe，主要关注词向量的表示。
+1. **早期模型**：早期的语言模型，如Word2Vec和GloVe，主要关注词向量的表示。
 
-2. **Transformer架构**：
-   - Transformer模型的引入是一个重大突破。它利用自注意力机制，能够更好地捕捉文本中的长距离依赖关系。
+2. **Transformer架构**：Transformer模型的引入是一个重大突破。它利用自注意力机制，能够更好地捕捉文本中的长距离依赖关系。
 
 3. **GPT系列**：
    - GPT-1：OpenAI发布的第一个GPT模型，展示了通过预训练和微调进行文本生成的潜力。
@@ -39,45 +33,33 @@ permalink: /advancedTechnology/llm/start/
 
 ### 应用领域
 
-1. **自然语言处理**：
-   - 文本生成、翻译、摘要、情感分析等。
+1. **自然语言处理**：文本生成、翻译、摘要、情感分析等。
 
-2. **对话系统**：
-   - 聊天机器人、虚拟助手、客户服务等。
+2. **对话系统**：聊天机器人、虚拟助手、客户服务等。
 
-3. **创意写作**：
-   - 文章、故事、剧本生成等。
+3. **创意写作**：文章、故事、剧本生成等。
 
-4. **教育和研究**：
-   - 提供知识问答、辅助写作、语言学习等。
+4. **教育和研究**：提供知识问答、辅助写作、语言学习等。
 
-5. **商业和营销**：
-   - 文案撰写、个性化推荐、数据分析等。
+5. **商业和营销**：文案撰写、个性化推荐、数据分析等。
 
 ### 挑战和问题
 
-1. **计算资源需求**：
-   - 大模型的训练和推理需要大量的计算资源和时间。
+1. **计算资源需求**：大模型的训练和推理需要大量的计算资源和时间。
 
-2. **数据隐私和安全**：
-   - 使用大规模数据进行训练可能涉及隐私和数据安全问题。
+2. **数据隐私和安全**：使用大规模数据进行训练可能涉及隐私和数据安全问题。
 
-3. **模型偏见**：
-   - 训练数据中的偏见可能导致模型输出结果中存在偏见。
+3. **模型偏见**：训练数据中的偏见可能导致模型输出结果中存在偏见。
 
-4. **可解释性**：
-   - 大模型的决策过程复杂，难以解释其生成的具体原因和逻辑。
+4. **可解释性**：大模型的决策过程复杂，难以解释其生成的具体原因和逻辑。
 
 ### 未来发展
 
-1. **模型压缩和优化**：
-   - 研究如何在保持性能的前提下降低模型规模和计算需求。
+1. **模型压缩和优化**：研究如何在保持性能的前提下降低模型规模和计算需求。
 
-2. **更好的训练数据和方法**：
-   - 提高数据质量，改进训练方法，减少偏见和提高模型的鲁棒性。
+2. **更好的训练数据和方法**：提高数据质量，改进训练方法，减少偏见和提高模型的鲁棒性。
 
-3. **多模态模型**：
-   - 结合文本、图像、音频等多种数据类型，提升模型的综合理解和生成能力。
+3. **多模态模型**：结合文本、图像、音频等多种数据类型，提升模型的综合理解和生成能力。
 
 通过了解大模型的特点、应用和挑战，可以更好地利用这些先进的技术，实现各种实际应用中的创新和改进。
 
