--- a/docs/advancedTechnology/llm/ 10.本地使用OLLAMA搭建大模型.md
+++ b/docs/advancedTechnology/llm/ 10.本地使用OLLAMA搭建大模型.md
@@ -193,3 +193,16 @@ docker run -d -p 3000:8080 -v ~/.open-webui:/app/backend/data --name open-webui 
 看下提问面板
 
 ![LLnH8i](https://qiqiang.oss-cn-hangzhou.aliyuncs.com/muan/LLnH8i.png)
+
+### 搭建 MaxKB
+
+MaxKB 是一款基于 LLM 大语言模型的知识库问答系统。MaxKB = Max Knowledge Base，旨在成为企业的最强大脑。
+
+开箱即用：支持直接上传文档、自动爬取在线文档，支持文本自动拆分、向量化、RAG（检索增强生成），智能问答交互体验好；
+无缝嵌入：支持零编码快速嵌入到第三方业务系统；
+多模型支持：支持对接主流的大模型，包括 Ollama 本地私有大模型（如 Meta Llama 3、qwen 等）、通义千问、OpenAI、Azure OpenAI、Kimi、智谱 AI、讯飞星火和百度千帆大模型等。
+
+
+```shell
+docker run -d --name=maxkb -p 8081:8080 -v ~/.maxkb:/var/lib/postgresql/data 1panel/maxkb
+```
