新增 zsh 插件分享

--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -107,6 +107,16 @@ vim .zshrc
 ZSH_THEME="steeef"
 ```
 
+#### 相关 ZSH 插件推荐
+
+[**zsh-syntax-highlighting**](https://github.com/zsh-users/zsh-syntax-highlighting/blob/master/INSTALL.md) 高亮插件
+
+[**you-should-use**](https://github.com/MichaelAquilina/zsh-you-should-use) 命令优化插件
+
+[**zsh-autosuggestions**](https://github.com/zsh-users/zsh-autosuggestions/blob/master/INSTALL.md) 自动建议命令的插件
+
+[**zsh-better-npm-completion**](https://github.com/lukechilds/zsh-better-npm-completion) 自动完成命令的插件，可以按 tab 键切换选项
+
 ### brew 安装
 
 推荐这个仓库 <https://gitee.com/cunkai/HomebrewCN>。
