新增 vscode 插件推荐

--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -168,10 +168,16 @@ export NVM_DIR="$HOME/.nvm"
    [ -s "/usr/local/opt/nvm/etc/bash_completion.d/nvm" ] && \. "/usr/local/opt/nvm/etc/bash_completion.d/nvm"  # This     loads nvm bash_completion
 ```
 
-### 配置从命令行用 Vscode 打开文件
+### VsCode 配置
+
+#### 配置从命令行用 Vscode 打开文件
 
 打开 .zshrc 文件编辑，加入一下代码
 
 ``` shell
 alias code="/Applications/Visual\ Studio\ Code.app/Contents/Resources/app/bin/code"
 ```
+
+#### 插件推荐
+
+**Project Manager** 可以很方面管理你的项目，快速切换
