--- a/docs/dev/30.Git常用操作.md
+++ b/docs/dev/30.Git常用操作.md
@@ -42,6 +42,80 @@ git merge origin/master --allow-unrelated-histories
     git checkout HEAD filename
     ```
 
+## reset 提交
+
+`git reset` 是一个强大的命令，用于撤销更改或移动 HEAD 和分支引用。它有几种不同的模式，每种模式对工作目录、暂存区和提交历史的影响不同。以下是 `git reset` 的详细解释：
+
+基本语法：
+```
+git reset [<mode>] [<commit>]
+```
+
+主要模式：
+
+1. **--soft**
+   - 移动 HEAD 到指定的提交。
+   - 不改变暂存区和工作目录。
+   - 所有改动保持为"待提交"状态。
+
+   ```
+   git reset --soft <commit>
+   ```
+
+2. **--mixed**（默认模式）
+   - 移动 HEAD 到指定的提交。
+   - 重置暂存区，但不改变工作目录。
+   - 所有改动保持为"未暂存"状态。
+
+   ```
+   git reset [--mixed] <commit>
+   ```
+
+3. **--hard**
+   - 移动 HEAD 到指定的提交。
+   - 重置暂存区和工作目录。
+   - 谨慎使用，会丢失未提交的更改。
+
+   ```
+   git reset --hard <commit>
+   ```
+
+常用参数：
+
+- `HEAD~n`: 回退 n 个提交。
+- `<commit-hash>`: 回退到特定的提交。
+- `--`: 用于分隔提交和文件路径。
+
+特殊用法：
+
+1. 撤销暂存（unstage）：
+   ```
+   git reset [--mixed] HEAD <file>
+   ```
+
+2. 保留工作目录的更改，但撤销最近的提交：
+   ```
+   git reset HEAD~1
+   ```
+
+3. 完全撤销最近的提交，包括工作目录的更改：
+   ```
+   git reset --hard HEAD~1
+   ```
+
+4. 移动分支指针，不影响 HEAD：
+   ```
+   git reset --soft <other-branch>
+   ```
+
+注意事项：
+
+1. `--hard` 模式会永久删除更改，使用时要非常小心。
+2. 如果已经推送到远程仓库，重置后需要强制推送 (`git push --force`)，这可能会影响其他协作者。
+3. 对于已经推送的公共提交，最好使用 `git revert` 而不是 `git reset`。
+
+`git reset` 是一个非常灵活的工具，可以用来管理提交历史、暂存区和工作目录。理解不同模式的作用对于有效使用 Git 非常重要。
+
 ## 分支和仓库
 
 1. 查看远程地址并设置新地址 `git remote -v`
