新增推荐软件

--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -31,6 +31,7 @@ permalink: /dev/271d86/
 21. 收费的（可破解） MacOS 动态壁纸软件 [**Dynamic Wallpaper for Mac**](https://macoshome.com/app/utilities/6908.html)<Badge text="MacOS" type="tip" />；
 22. 免费的 Windows 优化软件 [**optimizer**]([text](https://github.com/hellzerg/optimizer))<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 23. 有颜也有料，多彩更出彩，一个更现代化的Redis桌面管理客户端[Tiny RDM](https://redis.tinycraft.cc/zh/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
+24. Windows桌面美化工具 [Sapphire](https://www.yuque.com/hymnly/ux6umv/ce3cqy419av769fk?singleDoc#vU8gZ)<Badge text="Windows" type="info" />；
 
 ## 网址推荐
 
