新增推荐软件

--- a/docs/dev/20.开发软件和配置分享.md
+++ b/docs/dev/20.开发软件和配置分享.md
@@ -24,7 +24,7 @@ permalink: /dev/271d86/
 14. MacOS 控制外接显示器的小工具，可以调节亮度和声音 [MonitorControl](https://github.com/MonitorControl/MonitorControl/releases)<Badge text="MacOS" type="tip" />；
 15. jvm可视化分析工具 [**VisualVm**](https://visualvm.github.io/download.html)，下载后需要配置Java环境<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 16. MacOS 免费截图工具 [**iShot**](https://www.better365.cn/ishot.html)，想要高级功能可以买断pro版本<Badge text="MacOS" type="tip" />；
-17. MacOS VPN 代理工具 [**ClashX**](https://github.com/yichengchen/clashX/releases)和增强版[ClashX Pro](https://install.appcenter.ms/users/clashx/apps/clashx-pro/distribution_groups/public)<Badge text="MacOS" type="tip" />；
+17. VPN 代理工具 [**Clash Verge Rev**](https://github.com/clash-verge-rev/clash-verge-rev/releases)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 18. 免费截图工具 [**snipaste**](https://zh.snipaste.com/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 19. 免费的Windows Dock 美化软件 [**Nexus**](https://www.winstep.net/nexus.asp)<Badge text="MacOS" type="tip" />；
 20. 免费的 Windows 动态壁纸软件 [**lively wallpaper**](https://github.com/rocksdanister/lively/releases)，美化你的桌面<Badge text="Windows" type="info" />；
@@ -32,6 +32,8 @@ permalink: /dev/271d86/
 22. 免费的 Windows 优化软件 [**optimizer**]([text](https://github.com/hellzerg/optimizer))<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 23. 有颜也有料，多彩更出彩，一个更现代化的Redis桌面管理客户端[Tiny RDM](https://redis.tinycraft.cc/zh/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 24. Windows桌面美化工具 [Sapphire](https://www.yuque.com/hymnly/ux6umv/ce3cqy419av769fk?singleDoc#vU8gZ)<Badge text="Windows" type="info" />；
+25. Windows搜索工具 [Flow-Launcher](https://github.com/Flow-Launcher/Flow.Launcher/releases)<Badge text="Windows" type="info" />；
+26. macos 搜索工具 [raycast](https://www.raycast.com/)<Badge text="MacOS" type="tip" />；
 
 ## 网址推荐
 
