--- a/docs/linux/command/10.Linux简单有趣的命令.md
+++ b/docs/linux/command/10.Linux简单有趣的命令.md
@@ -1,7 +1,7 @@
 ---
 title: Linux 简单有趣的命令
 date: 2022-06-08 23:11:38
-permalink: /linux/db53d7/
+permalink: /linux/command/db53d7/
 ---
 
 # Linux 简单有趣的命令
