--- a/docs/dev/21.开发软件分享.md
+++ b/docs/dev/21.开发软件分享.md
@@ -34,3 +34,18 @@ permalink: /dev/soft-and-web/
 24. Windows桌面美化工具 [Sapphire](https://www.yuque.com/hymnly/ux6umv/ce3cqy419av769fk?singleDoc#vU8gZ)<Badge text="Windows" type="info" />；
 25. Windows搜索工具 [Flow-Launcher](https://github.com/Flow-Launcher/Flow.Launcher/releases)<Badge text="Windows" type="info" />；
 26. macos 搜索工具 [raycast](https://www.raycast.com/)<Badge text="MacOS" type="tip" />；
+27. Macos 免费的数据库工具 [Sequel-Ace](https://github.com/Sequel-Ace/Sequel-Ace)<Badge text="MacOS" type="tip" />；
+28. Macos 上比 Docker Desktop 更好用的容器工具，可以部署 k8s 和 linux 虚拟机 [OrbStack](https://docs.orbstack.dev/)<Badge text="MacOS" type="tip" />；
+
+
+## 网址推荐
+
+1. 一个免费的 mac 软件下载网址 [**麦氪搜**](https://www.imacso.com/)； 
+2. 开发技术书籍资源网站 [**搬书匠**](http://www.banshujiang.cn/)；
+3. Jdk 下载网站 [**injdk**](https://www.injdk.cn/)；
+4. 纯净操作系统下载网站 [**I TELL YOU**](https://next.itellyou.cn/)；
+5. 英文命名神器，解救你的二级英语水平 [**CODEIF**](https://unbug.github.io/codelf/)；
+6. 免费的在线文件转换工具 [**cloudconvert**](https://cloudconvert.com/)；
+7. 完全免费、易于使用、丰富的PDF处理工具 [**ilovepdf**](https://www.ilovepdf.com/zh-cn)；
+8. 免费的静态服务器资源托管网站 [**Vercel**](https://vercel.com)；
+9. 美化工具和资源网站 [**致美化**](https://zhutix.com/)；
