--- a/docs/dev/21.好用的软件和网址分享.md
+++ b/docs/dev/21.好用的软件和网址分享.md
@@ -1,13 +1,17 @@
 ---
-title: 开发软件和插件分享
+title: 好用的软件和网址分享
 date: 2022-06-02 18:53:20
 permalink: /dev/soft-and-web/
 ---
-# 开发软件和插件分享
+# 好用的软件和网址分享
 
 分享一些自己好用的软件和网址，记录一些开发者必备的傻瓜式配置，方便忘记的时候快速找到。
 
 ## 软件推荐
+
+| 项目                                                       | MacOS | Windows | 说明          |
+|------------------------------------------------------------|-------|---------|---------------|
+| [SwitchHosts](https://www.electronjs.org/apps/switchhosts) | -[x]  | -[]     | hosts切换工具 |
 
 1. hosts切换工具 [**SwitchHosts**](https://www.electronjs.org/apps/switchhosts)，强烈推荐<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 2. 好看好用的 Redis GUI工具 [**AnotherRedisDesktopManager**](https://gitee.com/qishibo/AnotherRedisDesktopManager)。下载或者 MacOS 命令安装`brew install --cask another-redis-desktop-manager`；
@@ -28,14 +32,13 @@ permalink: /dev/soft-and-web/
 18. 免费截图工具 [**snipaste**](https://zh.snipaste.com/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 19. 免费的Windows Dock 美化软件 [**Nexus**](https://www.winstep.net/nexus.asp)<Badge text="MacOS" type="tip" />；
 20. 免费的 Windows 动态壁纸软件 [**lively wallpaper**](https://github.com/rocksdanister/lively/releases)，美化你的桌面<Badge text="Windows" type="info" />；
-21. 收费的（可破解） MacOS 动态壁纸软件 [**Dynamic Wallpaper for Mac**](https://macoshome.com/app/utilities/6908.html)<Badge text="MacOS" type="tip" />；
+21. Macos 上比 Docker Desktop 更好用的容器工具，可以部署 k8s 和 linux 虚拟机 [OrbStack](https://docs.orbstack.dev/)<Badge text="MacOS" type="tip" />；
 22. 免费的 Windows 优化软件 [**optimizer**]([text](https://github.com/hellzerg/optimizer))<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 23. 有颜也有料，多彩更出彩，一个更现代化的Redis桌面管理客户端[Tiny RDM](https://redis.tinycraft.cc/zh/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 24. Windows桌面美化工具 [Sapphire](https://www.yuque.com/hymnly/ux6umv/ce3cqy419av769fk?singleDoc#vU8gZ)<Badge text="Windows" type="info" />；
 25. Windows搜索工具 [Flow-Launcher](https://github.com/Flow-Launcher/Flow.Launcher/releases)<Badge text="Windows" type="info" />；
-26. macos 搜索工具 [raycast](https://www.raycast.com/)<Badge text="MacOS" type="tip" />；
+26. Macos 搜索工具 [raycast](https://www.raycast.com/)<Badge text="MacOS" type="tip" />；
 27. Macos 免费的数据库工具 [Sequel-Ace](https://github.com/Sequel-Ace/Sequel-Ace)<Badge text="MacOS" type="tip" />；
-28. Macos 上比 Docker Desktop 更好用的容器工具，可以部署 k8s 和 linux 虚拟机 [OrbStack](https://docs.orbstack.dev/)<Badge text="MacOS" type="tip" />；
 
 
 ## 网址推荐
@@ -49,3 +52,4 @@ permalink: /dev/soft-and-web/
 7. 完全免费、易于使用、丰富的PDF处理工具 [**ilovepdf**](https://www.ilovepdf.com/zh-cn)；
 8. 免费的静态服务器资源托管网站 [**Vercel**](https://vercel.com)；
 9. 美化工具和资源网站 [**致美化**](https://zhutix.com/)；
+10. 一个可以免费部署静态项目的网站 [Vercel](https://vercel.com/docs)，本项目就是通过这个部署的，还可以配置自己的域名；
