--- a/docs/notes/note/systemArchitecture/7.信息系统基础知识.md
+++ b/docs/notes/note/systemArchitecture/7.信息系统基础知识.md
@@ -1,3 +1,8 @@
+---
+title: 7.信息系统基础知识
+createTime: 2024/11/24 19:20:57
+permalink: /article/29r8vpuc/
+---
 # 信息系统基础知识
 
 信息系统是由计算机硬件，网络和通信设备、计算机软件、信息资源、信息用户和规章制度组成的以处理信息流为目的的人机一体化系统。
