--- a/docs/notes/dev/21.好用的软件和网址分享.md
+++ b/docs/notes/dev/21.好用的软件和网址分享.md
@@ -36,6 +36,7 @@ permalink: /dev/soft-and-web/
 25. Windows搜索工具 [Flow-Launcher](https://github.com/Flow-Launcher/Flow.Launcher/releases)<Badge text="Windows" type="info" />；
 26. Macos 搜索工具 [raycast](https://www.raycast.com/)<Badge text="MacOS" type="tip" />；
 27. Macos 免费的数据库工具 [Sequel-Ace](https://github.com/Sequel-Ace/Sequel-Ace)<Badge text="MacOS" type="tip" />；
+28. 自动切换输入法，终于可以不用经常切换输入法了[Input Source Pro](https://inputsource.pro/zh-CN)<Badge text="MacOS" type="tip" />；
 
 
 ## 网址推荐
