--- a/docs/notes/cloudNative/1.docker基本使用.md
+++ b/docs/notes/cloudNative/1.docker基本使用.md
@@ -1,7 +1,7 @@
 ---
 title: docker 基本使用
 createTime: 2021-11-26 13:20:21
-permalink: /advanced/cloudNative/d3cfc6/
+permalink: /cloudNative/d3cfc6/
 ---
 
 # 简介
