--- a/docs/notes/cloudNative/2.docker代理服务器配置.md
+++ b/docs/notes/cloudNative/2.docker代理服务器配置.md
@@ -1,7 +1,7 @@
 ---
 title: docker 代理服务器配置
 createTime: 2023-06-11 13:20:21
-permalink: /advanced/cloudNative/d3cfc7/
+permalink: /cloudNative/d3cfc7/
 ---
 
 # docker 代理服务器配置
