--- a/docs/notes/cloudNative/30.Macos-minikube.md
+++ b/docs/notes/cloudNative/30.Macos-minikube.md
@@ -1,7 +1,7 @@
 ---
 title: Macos-minikube
 createTime: 2022-06-02 18:53:20
-permalink: /advanced/cloudNative/dab1f6/
+permalink: /cloudNative/dab1f6/
 ---
 # Macos 搭建 minikube 玩转 k8s
 
