--- a/docs/notes/cloudNative/50.Ubuntu使用kubeadm安装k8s集群.md
+++ b/docs/notes/cloudNative/50.Ubuntu使用kubeadm安装k8s集群.md
@@ -1,7 +1,7 @@
 ---
 title: Ubuntu使用kubeadm安装k8s集群
 createTime: 2022-08-14 20:27:24
-permalink: /advanced/cloudNative/517b0e/
+permalink: /cloudNative/517b0e/
 ---
 # Ubuntu 使用 kubeadm 安装k8s集群环境
 
