--- a/docs/notes/cloudNative/10.k8s-常用命令.md
+++ b/docs/notes/cloudNative/10.k8s-常用命令.md
@@ -1,7 +1,7 @@
 ---
 title: k8s 常用命令
 createTime: 2021-12-13 10:08:33
-permalink: /advanced/cloudNative/81e7b1/
+permalink: /cloudNative/81e7b1/
 ---
 # k8s 常用命令
 
