--- a/docs/notes/cloudNative/20.k8s之Job与CronJob.md
+++ b/docs/notes/cloudNative/20.k8s之Job与CronJob.md
@@ -4,7 +4,7 @@ createTime: 2022-05-20 21:30:15
 tag: k8s
 category: k8s
 summary: null
-permalink: /advanced/cloudNative/db014d/
+permalink: /cloudNative/db014d/
 ---
 
 # k8s之Job与CronJob
