--- a/docs/notes/cloudNative/60.探索k8s过程中的问题和解决方案.md
+++ b/docs/notes/cloudNative/60.探索k8s过程中的问题和解决方案.md
@@ -1,7 +1,7 @@
 ---
 title: 探索k8s过程中的问题和解决方案
 createTime: 2022-07-16 23:07:05
-permalink: /advanced/cloudNative/cfd207/
+permalink: /cloudNative/cfd207/
 ---
 # 探索k8s过程中的问题和解决方案
 
