--- a/docs/notes/cloudNative/70.k8s持久化存储.md
+++ b/docs/notes/cloudNative/70.k8s持久化存储.md
@@ -1,7 +1,7 @@
 ---
 title: k8s持久化存储
 createTime: 2022-08-19 09:26:45
-permalink: /advanced/cloudNative/104ac5/
+permalink: /cloudNative/104ac5/
 ---
 
 # k8s持久化存储
