--- a/docs/notes/cloudNative/80.k8s使用StatefulSet搭建Redis主从模式.md
+++ b/docs/notes/cloudNative/80.k8s使用StatefulSet搭建Redis主从模式.md
@@ -1,7 +1,7 @@
 ---
 title: k8s 使用 StatefulSet 搭建 Redis 主从模式
 createTime: 2022-08-23 11:57:54
-permalink: /advanced/cloudNative/23c98b/
+permalink: /cloudNative/23c98b/
 ---
 
 # k8s 使用 StatefulSet 搭建 Redis 主从模式
