--- a/docs/notes/cloudNative/90.K8s部署单机Mysql.md
+++ b/docs/notes/cloudNative/90.K8s部署单机Mysql.md
@@ -1,7 +1,7 @@
 ---
 title: K8s部署单机Mysql
 createTime: 2022-11-27 09:26:45
-permalink: /advanced/cloudNative/104a10/
+permalink: /cloudNative/104a10/
 ---
 # K8s部署单机Mysql
 
