--- a/docs/notes/llm/ 10.本地使用ollama搭建大模型.md
+++ b/docs/notes/llm/ 10.本地使用ollama搭建大模型.md
@@ -1,7 +1,7 @@
 ---
-title: 本地使用OLLAMA搭建大模型
+title: 本地使用ollama搭建大模型
 createTime: 2024-06-09 10:08:33
-permalink: /advanced/llm/start/
+permalink: /llm/start/
 ---
 # 本地使用OLLAMA搭建大模型
 
@@ -69,7 +69,7 @@ permalink: /advanced/llm/start/
 
 1. 有一台性能不差的电脑，OLLAMA 推荐配置如下，至少需要 8G 的 RAM：
    ![ZMyLFo](https://qiqiang.oss-cn-hangzhou.aliyuncs.com/muan/ZMyLFo.png)
-2. 准备 docker 环境，可参考教程 [docker基本使用](/advanced/cloudNative/d3cfc6)；
+2. 准备 docker 环境，可参考教程 [docker基本使用](/cloudNative/d3cfc6)；
 
 
 ### 搭建 OLLAMA
