--- a/docs/notes/dev/21.好用的软件和网址分享.md
+++ b/docs/notes/dev/21.好用的软件和网址分享.md
@@ -37,7 +37,13 @@ permalink: /dev/soft-and-web/
 26. Macos 搜索工具 [raycast](https://www.raycast.com/)<Badge text="MacOS" type="tip" />；
 27. Macos 免费的数据库工具 [Sequel-Ace](https://github.com/Sequel-Ace/Sequel-Ace)<Badge text="MacOS" type="tip" />；
 28. 自动切换输入法，终于可以不用经常切换输入法了[Input Source Pro](https://inputsource.pro/zh-CN)<Badge text="MacOS" type="tip" />；
+29. 开源免费高颜值的 Homebrew UI 工具[Applite](https://github.com/milanvarady/Applite)<Badge text="MacOS" type="tip" />；
 
+## 命令行工具推荐
+
+1. `ls`命令的完美的替代品 [eza](https://github.com/eza-community/eza)；
+2. 在命令行压测 http 请求的简单高效工具 [oha](https://github.com/hatoo/oha)；
+3. 由AI大型语言模型（LLM）提供支持的命令行生产力工具 [ShellGPT](https://github.com/TheR1D/shell_gpt)；
 
 ## 网址推荐
 
