docs(dev): 添加 http-server 软件推荐
在好用的软件和网址分享文档中添加了 http-server 的推荐。http-server 是一个简单的、零配置的命令行静态HTTP服务器，适用于测试、本地开发和学习。

--- a/docs/notes/dev/21.好用的软件和网址分享.md
+++ b/docs/notes/dev/21.好用的软件和网址分享.md
@@ -44,6 +44,7 @@ permalink: /dev/soft-and-web/
 1. `ls`命令的完美的替代品 [eza](https://github.com/eza-community/eza)；
 2. 在命令行压测 http 请求的简单高效工具 [oha](https://github.com/hatoo/oha)；
 3. 由AI大型语言模型（LLM）提供支持的命令行生产力工具 [ShellGPT](https://github.com/TheR1D/shell_gpt)；
+4. [http-server](https://github.com/http-party/http-server)是一个简单的、零配置的命令行静态HTTP服务器。它对于生产使用来说足够强大，但它足够简单和可破解，可以用于测试，本地开发和学习；
 
 ## 网址推荐
 
