--- a/docs/notes/dev/21.好用的软件和网址分享.md
+++ b/docs/notes/dev/21.好用的软件和网址分享.md
@@ -38,6 +38,7 @@ permalink: /dev/soft-and-web/
 27. Macos 免费的数据库工具 [Sequel-Ace](https://github.com/Sequel-Ace/Sequel-Ace)<Badge text="MacOS" type="tip" />；
 28. 自动切换输入法，终于可以不用经常切换输入法了[Input Source Pro](https://inputsource.pro/zh-CN)<Badge text="MacOS" type="tip" />；
 29. 开源免费高颜值的 Homebrew UI 工具[Applite](https://github.com/milanvarady/Applite)<Badge text="MacOS" type="tip" />；
+30. 强烈推荐微信输入法，让你的隐私只给到微信[微信输入法](https://z.weixin.qq.com/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 
 ## 命令行工具推荐
 
