--- a/docs/notes/dev/22.开发配置分享.md
+++ b/docs/notes/dev/22.开发配置分享.md
@@ -125,3 +125,18 @@ alias code="/Applications/Visual\ Studio\ Code.app/Contents/Resources/app/bin/co
 #### 插件推荐
 
 **Project Manager** 可以很方面管理你的项目，快速切换
+
+### 字体推荐
+
+### [Maple Mono](https://font.subf.dev/zh-cn/)
+
+安装教程 https://font.subf.dev/zh-cn/download/
+
+```shell
+# Maple Mono
+brew install --cask font-maple-mono
+# Maple Mono NF
+brew install --cask font-maple-mono-nf
+# Maple Mono NF CN
+brew install --cask font-maple-mono-nf-cn
+```
