--- a/docs/notes/dev/21.好用的软件和网址分享.md
+++ b/docs/notes/dev/21.好用的软件和网址分享.md
@@ -13,6 +13,7 @@ permalink: /dev/soft-and-web/
 1. hosts切换工具 [**SwitchHosts**](https://www.electronjs.org/apps/switchhosts)，强烈推荐<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 2. 好看好用的 Redis GUI工具 [**AnotherRedisDesktopManager**](https://gitee.com/qishibo/AnotherRedisDesktopManager)。下载或者 MacOS 命令安装`brew install --cask another-redis-desktop-manager`；
 3. MacOS 取色工具 [**ColorSlurp**](https://apps.apple.com/cn/app/colorslurp/id1287239339?l=en&mt=12)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
+4. Macos上的改建神器 [Karabiner-Elements](https://karabiner-elements.pqrs.org/)，当你的键盘不支持 Macos 系统时，或者可以使用这个软件调换 cmd 和 alt，还有其他的神器功能<Badge text="MacOS" type="tip" />；
 5. **收费**终端工具 [**termius**](https://www.termius.com/)。该工具收费，可以网上找破解版<Badge text="MacOS" type="tip" />；
 6. 免费终端工具 [**tabby**](https://github.com/Eugeny/tabby/releases)，是 [termius](https://www.termius.com/) 的开源版<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
 7. 轻量级 Api 工具，Postman 替代品 [**hoppscotch**](https://hoppscotch.io/cn/)<Badge text="Web" type="danger" />；
@@ -38,7 +39,8 @@ permalink: /dev/soft-and-web/
 27. Macos 免费的数据库工具 [Sequel-Ace](https://github.com/Sequel-Ace/Sequel-Ace)<Badge text="MacOS" type="tip" />；
 28. 自动切换输入法，终于可以不用经常切换输入法了[Input Source Pro](https://inputsource.pro/zh-CN)<Badge text="MacOS" type="tip" />；
 29. 开源免费高颜值的 Homebrew UI 工具[Applite](https://github.com/milanvarady/Applite)<Badge text="MacOS" type="tip" />；
-30. 强烈推荐微信输入法，让你的隐私只给到微信[微信输入法](https://z.weixin.qq.com/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
+30. 强烈推荐微信输入法，让你的隐私只给到[微信输入法](https://z.weixin.qq.com/)<Badge text="MacOS" type="tip" /><Badge text="Windows" type="info" />；
+
 
 ## 命令行工具推荐
 
