Update development configuration notes
Add Ghostty configuration details and update installation instructions.

--- a/docs/notes/dev/22.开发配置分享.md
+++ b/docs/notes/dev/22.开发配置分享.md
@@ -36,7 +36,7 @@ permalink: /dev/configuration-share/
 apt install zsh
 ```
 
-安装 **oh-my-zsh** 
+安装 **oh-my-zsh**
 
 ```shell
 # 国内访问更快
@@ -118,7 +118,7 @@ windows 系统环境下，下载 [nvm-windows](https://github.com/coreybutler/nv
 
 ```shell
 $ nvm install 22
-Downloading node.js version 22.16.0 (64-bit)... 
+Downloading node.js version 22.16.0 (64-bit)...
 Extracting node and npm...
 Complete
 Installation complete.
@@ -175,4 +175,31 @@ brew install --cask font-maple-mono
 brew install --cask font-maple-mono-nf
 # Maple Mono NF CN
 brew install --cask font-maple-mono-nf-cn
+```
+
+### Ghostty 配置
+
+```ini
+# 主题配置
+# theme = Atom One Dark
+theme = Snazzy
+
+# 字体配置
+font-family = Maple Mono NF
+font-size = 14
+
+# 背景图片
+background-image = ~/Documents/我的图片/壁纸/94628268331f4a9b92c0c36f5f4b196b.jpg
+background-image-fit = cover
+background-image-opacity = 0.5
+
+# icon
+macos-icon = holographic
+
+# 窗口设置
+window-subtitle = false
+
+# 解决ssh删除按键的bug
+shell-integration-features = ssh-terminfo,ssh-env
+term = xterm-256color
 ```
